feat(oauth): #6 authorization code flow with PKCE
